Update to Accuracy Assessment - Burn Area Extent

--- a/My_notebooks (VDI)/Accuracy Assessment.ipynb
+++ b/My_notebooks (VDI)/Accuracy Assessment.ipynb
@@ -6,27 +6,16 @@
    "source": [
     "### Accuracy Assessment\n",
     "Created by Amos Bennett.<br>\n",
-    "Last Updated 28 Sep 20. <br>\n",
+    "Last Updated 29 Sep 20. <br>\n",
     "\n",
     "__Updates:__ \n",
     "\n",
-    "Calculates the accuracy matrix (crosstab matrix) of the dNBR layer. Histogram shows class separability. By selecting breaks between classes with minimal overlap, the best accuracy result can be assessed for this particular classification. Actual and classified severities are then mapped against each other (per row) and a cross tabulation calculation is conducted."
+    "Calculates the accuracy matrix (crosstab matrix) of the dNBR layer for burn severity (classes: unburnt, low, moderate, high, extreme) and burn extent (classes: unburnt, burnt). Histogram shows class separability for the burn severity analysis. By selecting breaks between classes with minimal overlap, the best accuracy result can be assessed for this particular classification. Actual and classified severities are then mapped against each other (per row) and a cross tabulation calculation is conducted."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +88,7 @@
        "4  0.00954         Unburnt  POINT (619427.841 6050698.299)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +206,7 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  self.obj[k] = np.nan\n",
-      "<ipython-input-85-7532ddf11662>:1: SettingWithCopyWarning: \n",
+      "<ipython-input-153-7532ddf11662>:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -229,25 +218,25 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  isetter(loc, value)\n",
-      "<ipython-input-85-7532ddf11662>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-153-7532ddf11662>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  classified_low[['classified_severity']] = 'Low'\n",
-      "<ipython-input-85-7532ddf11662>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-153-7532ddf11662>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  classified_moderate[['classified_severity']] = 'Moderate'\n",
-      "<ipython-input-85-7532ddf11662>:4: SettingWithCopyWarning: \n",
+      "<ipython-input-153-7532ddf11662>:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  classified_high[['classified_severity']] = 'High'\n",
-      "<ipython-input-85-7532ddf11662>:5: SettingWithCopyWarning: \n",
+      "<ipython-input-153-7532ddf11662>:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -273,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +348,7 @@
        "10  POINT (613935.682 6011263.956)  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +456,7 @@
        "Extreme                    0    0         2    21       99"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +483,7 @@
        "79.8913043478261"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +571,7 @@
        "Unburnt           748       748"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -655,61 +644,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>758</th>\n",
-       "      <td>-0.07414</td>\n",
+       "      <th>456</th>\n",
+       "      <td>-0.00058</td>\n",
        "      <td>Unburnt</td>\n",
        "      <td>Unburnt</td>\n",
-       "      <td>POINT (621263.949 5981560.179)</td>\n",
+       "      <td>POINT (544788.290 5984411.511)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1019</th>\n",
-       "      <td>-0.06930</td>\n",
+       "      <th>988</th>\n",
+       "      <td>-0.00830</td>\n",
        "      <td>Unburnt</td>\n",
        "      <td>Unburnt</td>\n",
-       "      <td>POINT (615036.722 6012141.562)</td>\n",
+       "      <td>POINT (613548.009 6070000.824)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>-0.01056</td>\n",
+       "      <th>90</th>\n",
+       "      <td>0.08165</td>\n",
        "      <td>Unburnt</td>\n",
        "      <td>Unburnt</td>\n",
-       "      <td>POINT (606617.491 6021677.081)</td>\n",
+       "      <td>POINT (609030.483 6053482.824)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>944</th>\n",
-       "      <td>-0.04090</td>\n",
+       "      <th>801</th>\n",
+       "      <td>0.34963</td>\n",
        "      <td>Unburnt</td>\n",
-       "      <td>Unburnt</td>\n",
-       "      <td>POINT (621263.793 6080113.610)</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>POINT (624312.668 6054510.540)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>319</th>\n",
-       "      <td>-0.07091</td>\n",
+       "      <th>972</th>\n",
+       "      <td>-0.04908</td>\n",
        "      <td>Unburnt</td>\n",
        "      <td>Unburnt</td>\n",
-       "      <td>POINT (622397.638 6080389.110)</td>\n",
+       "      <td>POINT (613966.884 6012022.150)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         dNBR actual_severity classified_severity  \\\n",
-       "758  -0.07414         Unburnt             Unburnt   \n",
-       "1019 -0.06930         Unburnt             Unburnt   \n",
-       "231  -0.01056         Unburnt             Unburnt   \n",
-       "944  -0.04090         Unburnt             Unburnt   \n",
-       "319  -0.07091         Unburnt             Unburnt   \n",
+       "        dNBR actual_severity classified_severity  \\\n",
+       "456 -0.00058         Unburnt             Unburnt   \n",
+       "988 -0.00830         Unburnt             Unburnt   \n",
+       "90   0.08165         Unburnt             Unburnt   \n",
+       "801  0.34963         Unburnt            Moderate   \n",
+       "972 -0.04908         Unburnt             Unburnt   \n",
        "\n",
-       "                            geometry  \n",
-       "758   POINT (621263.949 5981560.179)  \n",
-       "1019  POINT (615036.722 6012141.562)  \n",
-       "231   POINT (606617.491 6021677.081)  \n",
-       "944   POINT (621263.793 6080113.610)  \n",
-       "319   POINT (622397.638 6080389.110)  "
+       "                           geometry  \n",
+       "456  POINT (544788.290 5984411.511)  \n",
+       "988  POINT (613548.009 6070000.824)  \n",
+       "90   POINT (609030.483 6053482.824)  \n",
+       "801  POINT (624312.668 6054510.540)  \n",
+       "972  POINT (613966.884 6012022.150)  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -765,43 +754,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Unburnt</th>\n",
-       "      <td>37</td>\n",
+       "      <td>38</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Low</th>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Moderate</th>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>16</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>High</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>10</td>\n",
-       "      <td>20</td>\n",
-       "      <td>10</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Extreme</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -810,14 +799,14 @@
       "text/plain": [
        "classified_severity  Unburnt  Low  Moderate  High  Extreme\n",
        "actual_severity                                           \n",
-       "Unburnt                   37    1         2     0        0\n",
-       "Low                       15   15        10     0        0\n",
-       "Moderate                   3    5        16     6       10\n",
-       "High                       0    0        10    20       10\n",
-       "Extreme                    0    0         0     5       35"
+       "Unburnt                   38    1         1     0        0\n",
+       "Low                       14   17         9     0        0\n",
+       "Moderate                   0    4        23     1       12\n",
+       "High                       0    2        10    19        9\n",
+       "Extreme                    0    0         1     9       30"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,16 +822,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "61.5"
+       "63.5"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,6 +849,129 @@
    "metadata": {},
    "source": [
     "This is likely a far more accurate representation of the overall accuracy of this classification. This is still not based considering the very minimal processing overhead for a dNBR compared to a multi-band fully connected neural network approach. Unfortunately, with each different location, scene, weather conditions (pre/post), vegetation ecosystems etc; there is significant variability that the chose threshold values would need to be tweaked to suit each scene. This is where a majority of the time would be spent, and normalising severity from one scene to another become very difficult as moderate in one may not neccessarily map well to moderate in another location with a completely different ecosystem of flora."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets look at the accuracy if the only two endmembers were 'Unburnt' or 'Burnt' areas. In order to do this, we re-map low, moderate, high and extreme categorisations in the actual and classified severity columns to 'burnt' and reproduce the crosstab."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.loc[results.actual_severity == 'Low', 'actual_severity'] = 'Burnt'\n",
+    "results.loc[results.actual_severity == 'Moderate', 'actual_severity'] = 'Burnt'\n",
+    "results.loc[results.actual_severity == 'High', 'actual_severity'] = 'Burnt'\n",
+    "results.loc[results.actual_severity == 'Extreme', 'actual_severity'] = 'Burnt'\n",
+    "results.loc[results.classified_severity == 'Low', 'classified_severity'] = 'Burnt'\n",
+    "results.loc[results.classified_severity == 'Moderate', 'classified_severity'] = 'Burnt'\n",
+    "results.loc[results.classified_severity == 'High', 'classified_severity'] = 'Burnt'\n",
+    "results.loc[results.classified_severity == 'Extreme', 'classified_severity'] = 'Burnt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>classified_severity</th>\n",
+       "      <th>Unburnt</th>\n",
+       "      <th>Burnt</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actual_severity</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Unburnt</th>\n",
+       "      <td>38</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Burnt</th>\n",
+       "      <td>14</td>\n",
+       "      <td>146</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "classified_severity  Unburnt  Burnt\n",
+       "actual_severity                    \n",
+       "Unburnt                   38      2\n",
+       "Burnt                     14    146"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xtab = pd.crosstab(results['actual_severity'], results['classified_severity'])\n",
+    "sev = ['Unburnt', 'Burnt']\n",
+    "\n",
+    "xtab = xtab.reindex(sev, axis=\"columns\")\n",
+    "xtab = xtab.reindex(sev, axis=\"rows\")\n",
+    "xtab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92.0"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overall_accuracy = (xtab['Unburnt']['Unburnt'] + xtab['Burnt']['Burnt'])/len(results)*100\n",
+    "\n",
+    "overall_accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall, the accuracy of the dNBR in identifying between unburnt and burnt areas is approximately 90%. This is very high and a decent result for the identification of burn area extent or boundaries. A good way to really test this however would be to sample many points across known boundary areas in order to determine if the same accuracy still holds."
    ]
   }
  ],
